--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <body>
   <div class="container">
     <div id="question-container" class="hide">
-      <div id="question">Question</div>
+      <div id="question" class="question">Question</div>
       <div id="answer-buttons" class="btn-grid">
         <button class="btn">Answer 1</button>
         <button class="btn">Answer 2</button>
         <button class="btn">Answer 3</button>
         <button class="btn">Answer 4</button>
       </div>
+    </div>
+    <div id="score-container" class="score hide">
+      Score: <span id="player-score"></span> / <span id="total-score"></span>
     </div>
     <div class="controls">
       <button id="start-btn" class="start-btn btn">Start</button>
